some changes in footer

--- a/page.html
+++ b/page.html
@@ -4,9 +4,37 @@
 <title>Page Title</title>
 </head>
 <body>
+<hr>
+    <div>
+        <p> logo image</p>
+        <p>Email Address</p>
+    </div>
+    <hr>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+
+    <hr>
+    <div>
+        <p>First Menu</p>
+        <p>Second Menu</p>
+        <p>Third Menu</p>
+        <p>Fourth Menu</p>
+    </div>
+    <hr>
+
+    <hr>
+    <div>
+        <P>Left Bar Content</P>
+        <p>Right Bar Content </p>
+    </div>
+    <hr>
+
+   <hr>
+    <div>
+        <p>
+            Footer Content
+        </p>
+    </div>
+    <hr>
 
 </body>
 </html>
